# design

frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: MedicalReportPDF.tsx  ReportDisplay.tsx
frontend/src/components/edges/: CustomEdge.tsx
frontend/src/components/forms/: ImageForm.tsx  LabForm.tsx  PatientInfoForm.tsx  (+1 more)
frontend/src/pages/: Dashboard.tsx  WorkflowBuilder.tsx  WorkflowExecutor.tsx
frontend/src/services/: api.ts
frontend/src/types/: workflow.ts
frontend/src/utils/: workflowAnalyzer.ts
frontend/前端需求/: workflow_executor
langgraph_demo/: README.md  app.py  jiekou.py  langgraph.json  pyproject.toml  requirement.txt  sample_medical_report.json  test_workflow.py  workflow.py  测试.py
langgraph_demo/Readme/: 前端输入样例  后端格式  需求文档
langgraph_demo/data/: sample_patients.json
langgraph_demo/graphs/: workflow_1772084333.json  workflow_1772169385.json  workflow_1772265111.json  workflow_1773295446.json  workflow_1773295457.json  workflow_1775618009.json  workflow_1775801594.json  workflow_standard.json
langgraph_demo/src/agent/: __init__.py  graph_bulider.py  graph_loader.py  state_manager.py  workflow_executor.py
langgraph_demo/src/agent/nodes/: __init__.py
langgraph_demo/src/agent/nodes/medical/: __init__.py  base_agent.py  diagnosis_generator.py  history_analyzer.py  imaging_analyzer.py  lab_analyzer.py  symptom_analyzer.py
langgraph_demo/src/api/: handlers.py  routes.py  schemas.py
langgraph_demo/src/config/: settings.py
langgraph_demo/src/models/: medical_state.py
(+3 files in other folders)
